--- a/app/src/main/res/layout/content_terms_editor.xml
+++ b/app/src/main/res/layout/content_terms_editor.xml
@@ -99,4 +99,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/endDateText" />
 
+    <include
+        layout="@layout/nav_course"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/end_date_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
