--- a/app/src/main/res/layout/activity_term_to_course.xml
+++ b/app/src/main/res/layout/activity_term_to_course.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".CourseEditorActivity">
+    tools:context=".AssessmentsListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -33,6 +33,6 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_courses_editor" />
+    <include layout="@layout/content_term_to_course" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
