--- a/app/src/main/res/layout/item_term_to_course.xml
+++ b/app/src/main/res/layout/item_term_to_course.xml
@@ -7,27 +7,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/edit_term"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:clickable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_edit"
-        android:focusable="true" />
-
     <TextView
         android:id="@+id/course_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/changeme"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/edit_term"
-        app:layout_constraintTop_toTopOf="@+id/edit_term" />
+        app:layout_constraintStart_toEndOf="@+id/add_to_term"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/course_date_text"
@@ -59,4 +48,13 @@
         android:text="@string/changeme"
         app:layout_constraintStart_toEndOf="@+id/status_static_info"
         app:layout_constraintTop_toTopOf="@+id/status_static_info" />
+
+    <CheckBox
+        android:id="@+id/add_to_term"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_course"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
