--- a/app/src/main/res/layout/content_courses_editor.xml
+++ b/app/src/main/res/layout/content_courses_editor.xml
@@ -109,25 +109,6 @@
         app:layout_constraintStart_toEndOf="@+id/course_status_desc"
         app:layout_constraintTop_toBottomOf="@+id/end_date_button" />
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/nav_course_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/course_status_dropdown" />
-
-    <include
-        layout="@layout/nav_assessment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
-
     <CheckBox
         android:id="@+id/set_alarm"
         android:layout_width="wrap_content"
@@ -148,6 +129,35 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/end_date_button" />
+
+    <TextView
+        android:id="@+id/assessIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Assessments:"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/course_status_desc" />
+
+    <TextView
+        android:id="@+id/assessmentChangeableTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="ChangeForAssessmentList"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessIndicator" />
+
+    <include
+        layout="@layout/nav_course_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentChangeableTv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
