--- a/app/src/main/res/layout/content_mentors_editor.xml
+++ b/app/src/main/res/layout/content_mentors_editor.xml
@@ -60,5 +60,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mentor_email" />
 
+    <include
+        layout="@layout/nav_mentor_to_course"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mentor_phone" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
