--- a/app/src/main/res/layout/content_terms_editor.xml
+++ b/app/src/main/res/layout/content_terms_editor.xml
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="changeme"
+        android:text="No courses in this term."
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
